# stac-server-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  example-config.toml
.github/workflows/: ci.yaml  ci.yml  validate.yaml  validate.yml
data/: config.toml
data/joplin/: collection.json
pgstac/: Cargo.toml
pgstac-api-backend/: Cargo.toml
pgstac-api-backend/src/: lib.rs
pgstac/examples/: connect.rs  list-collections.rs
pgstac/src/: lib.rs
scripts/: docker-compose.yml  environment.yaml  requirements.in  requirements.txt  validate  wait-for-it.sh
src/: config.rs  error.rs  extract.rs  handler.rs  lib.rs  main.rs  router.rs  state.rs
src/backend/: mod.rs  pgstac.rs  simple.rs
stac-api/: Cargo.toml
stac-api-backend/: Cargo.toml
stac-api-backend/src/: api.rs  backend.rs  builder.rs  endpoints.rs  error.rs  items.rs  lib.rs  memory.rs  page.rs  paginated_item_collection.rs  pagination_links.rs  pgstac.rs
stac-api-backend/src/api/: api.rs  conformance.rs  features.rs  mod.rs  root.rs
stac-api/src/: config.rs  error.rs  hrefs.rs  lib.rs
stac-api/src/backend/: memory.rs  mod.rs  pgstac.rs
stac-api/src/endpoint/: collection.rs  collections.rs  mod.rs  root.rs
stac-backend/: Cargo.toml
stac-backend/src/: backend.rs  lib.rs  memory.rs  pgstac.rs
stac-server/: Cargo.toml
stac-server-cli/: Cargo.toml
stac-server-cli/src/: config.toml  lib.rs  main.rs
stac-server/src/: config.rs  core.rs  error.rs  extract.rs  lib.rs  router.rs  state.rs
stac-server/src/endpoint/: collection.rs  collections.rs  mod.rs  root.rs
stac-server/tests/: client.rs
