[package]
name = "stac-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.6"
bb8 = "0.8"
bb8-postgres = "0.8"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stac = "0.1"
tokio = { version = "1.22", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
toml = "0.5"
