[package]
name = "pgstac-api-backend"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
bb8-postgres = "0.8"
pgstac = { version = "0.0.3", git = "https://github.com/gadomski/pgstac-rs" }
serde = "1"
stac = { version = "0.4", git = "https://github.com/gadomski/stac-rs" }
stac-api = { version = "0.2", git = "https://github.com/gadomski/stac-rs" }
stac-api-backend = { path = "../stac-api-backend" }
thiserror = "1"
tokio-postgres = "0.7"
url = "2"
