[package]
name = "pgstac-api-backend"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "STAC API backend for pgstac"
homepage = "https://github.com/gadomski/stac-server-rs"
repository = "https://github.com/gadomski/stac-server-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
bb8-postgres = "0.8"
pgstac = { version = "0.0.4", git = "https://github.com/gadomski/pgstac-rs" }
stac = { version = "0.5", git = "https://github.com/gadomski/stac-rs" }
stac-api = { version = "0.2", git = "https://github.com/gadomski/stac-rs" }
stac-api-backend = { path = "../stac-api-backend" }
thiserror = "1"
tokio-postgres = "0.7"
url = "2"
