[package]
name = "pgstac"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
bb8-postgres = "0.8"
serde_json = "1"
stac = "0.2"
stac-backend = { path = "../stac-backend" }
thiserror = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
