[package]
name = "stac-api-backend"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "STAC API backend"
homepage = "https://github.com/gadomski/stac-server-rs"
repository = "https://github.com/gadomski/stac-server-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
async-trait = "0.1"
serde_json = "1"
stac = { version = "0.5", git = "https://github.com/gadomski/stac-rs", features = ["schemars"] }
stac-api = { version = "0.2", git = "https://github.com/gadomski/stac-rs", features = ["schemars"] }
thiserror = "1"
url = "2"

[dev-dependencies]
stac = { version = "0.5", git = "https://github.com/gadomski/stac-rs" }
stac-validate = { version = "0.1", git = "https://github.com/gadomski/stac-rs" }
tokio = { version = "1.24", features = ["rt", "macros"] }
tokio-test = { version = "0.4" }
