[package]
name = "stac-api-backend"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "STAC API backend"
homepage = "https://github.com/gadomski/stac-server-rs"
repository = "https://github.com/gadomski/stac-server-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[features]
memory = ["stac/geo"]
pgstac = ["dep:bb8", "dep:bb8-postgres", "dep:pgstac", "dep:tokio-postgres"]

[dependencies]
async-trait = "0.1"
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }
http = "0.2"
pgstac = { version = "0.0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
stac = { version = "0.5", features = ["schemars"] }
stac-api = { version = "0.3", features = ["schemars"] }
thiserror = "1"
tokio-postgres = { version = "0.7", optional = true }
url = "2"

[dev-dependencies]
stac-validate = { version = "0.1" }
tokio = { version = "1.24", features = ["rt", "macros"] }
tokio-test = { version = "0.4" }
