[package]
name = "stac-api"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
bb8 = { version = "0.8", optional = true }
bb8-postgres = { version = "0.8", optional = true }
pgstac = { version = "0.0.3", optional = true }
stac = "0.2"
thiserror = "1"
tokio-postgres = { version = "0.7", optional = true }

[features]
pgstac = ["dep:pgstac", "dep:bb8", "dep:bb8-postgres", "dep:tokio-postgres"]
