[package]
name = "stac-server-cli"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6"
clap = { version = "4", features = ["derive"] }
stac = { version = "0.3", git = "https://github.com/gadomski/stac-rs" }
stac-async = { version = "0.3", git = "https://github.com/gadomski/stac-rs" }
stac-api-backend = { version = "0.0.1", path = "../stac-api-backend", features = ["memory"] }
stac-server = { version = "0.0.1", path = "../stac-server" }
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
test = false
doc = false
doctest = false

[[bin]]
path = "src/main.rs"
name = "stac-server"
test = false
doc = false
doctest = false
