[package]
name = "stac-server-cli"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Command-line interface for a STAC API server"
homepage = "https://github.com/gadomski/stac-server-rs"
repository = "https://github.com/gadomski/stac-server-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
aide = "0.11"
axum = "0.6"
clap = { version = "4", features = ["derive"] }
serde = "1"
stac = { version = "0.5" }
stac-async = { version = "0.4" }
stac-api-backend = { version = "0.1", path = "../stac-api-backend", features = [
    "memory",
    "pgstac",
] }
stac-server = { version = "0.1", path = "../stac-server" }
thiserror = "1"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
toml = "0.7"

[lib]
path = "src/lib.rs"
test = false
doc = false
doctest = false

[[bin]]
path = "src/main.rs"
name = "stac-server"
test = false
doc = false
doctest = false
