[package]
name = "stac-server"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1", features = ["derive"] }
stac = { version = "0.4", git = "https://github.com/gadomski/stac-rs" }
stac-api = { version = "0.2", git = "https://github.com/gadomski/stac-rs" }
stac-api-backend = { version = "0.0.1", path = "../stac-api-backend" }
thiserror = "1"
url = "2.3"

[dev-dependencies]
stac-api-backend = { version = "0.0.1", path = "../stac-api-backend" }
tokio = { version = "1.23", features = ["rt", "macros"]}
tokio-test = { version = "0.4" }
tower = "0.4"
