[package]
name = "stac-server"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "STAC API server"
homepage = "https://github.com/gadomski/stac-server-rs"
repository = "https://github.com/gadomski/stac-server-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
aide = { version = "0.11", features = ["axum"] }
axum = "0.6"
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
serde_qs = "0.12"
stac = { version = "0.5", git = "https://github.com/gadomski/stac-rs", features = ["schemars"] }
stac-api = { version = "0.2", git = "https://github.com/gadomski/stac-rs", features = ["schemars"] }
stac-api-backend = { version = "0.1", path = "../stac-api-backend" }
thiserror = "1"
url = "2.3"

[dev-dependencies]
geojson = "0.24"
futures-util = "0.3"
stac = { version = "0.5", git = "https://github.com/gadomski/stac-rs", features = ["schemars", "geo"] }
stac-api-backend = { version = "0.1", path = "../stac-api-backend", features = ["memory", "pgstac"] }
stac-async = { version = "0.4", git = "https://github.com/gadomski/stac-rs" }
tokio = { version = "1.23", features = ["rt", "macros"]}
tokio-postgres = "0.7"
tokio-test = "0.4"
tower = "0.4"
