[package]
name = "stac-server"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "STAC API server"
homepage = "https://github.com/gadomski/stac-server-rs"
repository = "https://github.com/gadomski/stac-server-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "geo", "raster"]
categories = ["science", "data-structures"]

[dependencies]
aide = { version = "0.11", features = ["axum"] }
axum = "0.6"
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
serde_qs = "0.12"
stac = { version = "0.5", features = ["schemars"] }
stac-api = { version = "0.3", features = ["schemars"] }
stac-api-backend = { version = "0.1", path = "../stac-api-backend" }
thiserror = "1"
url = "2.3"

[dev-dependencies]
futures-util = "0.3"
geojson = "0.24"
stac = { version = "0.5", features = ["schemars", "geo"] }
stac-api-backend = { version = "0.1", path = "../stac-api-backend", features = [
    "memory",
    "pgstac",
] }
stac-async = "0.4"
stac-validate = { version = "0.1" }
tokio = { version = "1.23", features = ["rt", "macros"] }
tokio-postgres = "0.7"
tokio-test = "0.4"
tower = "0.4"
